--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
         "react-dnd-html5-backend": "^16.0.1",
         "react-modal": "^3.16.3",
         "react-quill-new": "^3.4.4",
+        "react-resizable": "^3.0.5",
         "react-resizeable": "^0.2.6",
         "react-router-dom": "^7.4.0",
         "react-scripts": "^5.0.1",
