--- a/server/package.json
+++ b/server/package.json
@@ -7,18 +7,21 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "init-db": "ts-node src/db/init-db.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "axios": "^0.21.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "esm": "^3.2.25",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "express-jwt": "^8.5.1",
     "joi": "^17.13.3",
     "json2csv": "^6.0.0-alpha.2",
@@ -31,9 +34,9 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/json2csv": "^5.0.7",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mysql": "^2.15.25",
